# goroslib

./: .golangci.yml  .travis.yml  FEATURES.md  Makefile  README.md  action_client.go  action_client_test.go  action_server.go  action_server_test.go  actionclient.go  actionclient_test.go  actionserver.go  actionserver_test.go  go.mod  go.sum  node-funcs.go  node.go  node_api_slave_server.go  node_funcs_master.go  node_funcs_master_test.go  node_funcs_node.go  node_funcs_node_test.go  node_funcs_time.go  node_funcs_time_test.go  node_log.go  node_log_test.go  node_tcpros_server.go  node_test.go  node_udpros_server.go  nodeapislaveserver.go  nodefuncs.go  nodefuncs_test.go  nodefuncsmaster.go  nodefuncsmaster_test.go  nodefuncsnode.go  nodefuncsnode_test.go  nodefuncsparam.go  nodefuncsparam_test.go  nodefuncstime.go  nodefuncstime_test.go  (+34 more)
api-master/: client.go  definitions.go
api-param/: client.go  definitions.go
api-slave/: client.go  definitions.go  server.go
apimaster/: client.go  definitions.go  defs.go
apiparam/: client.go  definitions.go
apislave/: client.go  definitions.go  defs.go  server.go
cmd/: action.go  msg.go  package.go  srv.go  util.go
example/: cluster_info.go  param_get.go  param_set_get.go  publisher.go  publisher_custom.go  publisher_custom_msg.go  serviceclient.go  serviceprovider.go  subscriber.go  subscriber_custom.go  subscriber_custom_msg.go
examples/: cluster-info.go  param-set-get.go  publisher-custom.go  publisher-standard.go  publisher.go  publisher_custom.go  serviceclient-custom.go  serviceclient.go  serviceprovider-custom.go  serviceprovider.go  simpleactionclient-custom.go  simpleactionclient.go  simpleactionserver-custom.go  simpleactionserver.go  subscriber-custom.go  subscriber-ipv6.go  subscriber-standard.go  subscriber-udp.go  subscriber.go  subscriber_custom.go
msg/: defs.go  md5.go  md5_test.go  type.go  type_test.go  types.go
msg-gen/: main.go
msg-import/: main.go
msg-utils/: binary.go  binary_test.go  md5.go  md5_test.go  type.go  type_test.go
msgs/: base.go
msgs-gen/: main.go
msgutils/: md5.go  md5_test.go
proto-common/: header.go  header_test.go  message.go  message_test.go
proto-tcp/: client.go  conn.go  headers.go  server.go
proto-udp/: frame.go  headers.go  server.go
protocommon/: header_test.go  message.go  message_test.go
prototcp/: conn.go  headers.go
protoudp/: frame.go  headers.go  server.go
scripts/: lint.mk  mod-tidy.mk  msgs.mk  test.mk
tcpros/: client.go  conn.go  header-decode.go  header-defs.go  header-encode.go  header.go  header_decode.go  header_decode_test.go  header_defs.go  (+11 more)
testimages/node-actionserver/: CMakeLists.txt  Dockerfile  main.cpp  package.xml  start.sh
testimages/node-serviceclient/nodeservice_srv/: CMakeLists.txt
testimages/node-serviceclient/shared_services/: CMakeLists.txt  package.xml
testimages/node-simpleactionclient/shared_actions/: CMakeLists.txt
testimages/node-simpleactionclient/shared_actions/action/: DoSomething.action
testimages/node-simpleactionserver/shared_actions/: package.xml
(+1192 files in other folders)
