<?xml version="1.0"?>
<package format="2">

  <name>nodeactionserver</name>
  <version>0.0.0</version>
  <description>empty</description>

  <maintainer email="null@null.null">null</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
